# spotify-cli

./: .gitignore  README.md  app  app.py  pyproject.toml  requirements-dev.txt
spotify/: auth_server.py  client.py
src/: __main__.py
src/cli/: __init__.py  _base.py  _get_top.py  get_saved_tracks.py  get_top_artists.py  get_top_tracks.py  main.py  next_song.py  player_previous.py
src/cli/tests/: test__get_top.py  test_get_saved_tracks.py  test_get_top_artists.py  test_get_top_tracks.py  test_logout.py  test_main.py  test_player_next.py  test_player_previous.py
src/commands/: __init__.py  _base.py  _get_top.py  _player.py  get_devices.py  get_saved_tracks.py  get_top_artists.py  get_top_tracks.py  logout.py  player_next.py  player_previous.py
src/commands/tests/: test__get_top.py  test__player.py  test_get_devices.py  test_get_saved_tracks.py  test_get_top_artists.py  test_get_top_tracks.py  test_logout.py  test_player_next.py  test_player_previous.py
src/parsers/: __init__.py  device.py  number.py  offset.py  term.py  verbose.py
src/parsers/tests/: test_device.py  test_number.py  test_offset.py  test_term.py  test_verbose.py
src/scripts/: __init__.py  _get_top.py  app.py  get_saved_tracks.py  get_top_artists.py  get_top_tracks.py  logout.py  main.py
src/scripts/tests/: test_main.py
src/spotify/: auth_server.py  client.py
src/tests/: test_main.py
src/utils/: __init__.py  auth_server.py  cache.py  split_uri.py  user_input.py
test_utils/: __init__.py
type_definitions/: __init__.py  json_object.py
utils/: __init__.py  split_uri.py
(+5 files in other folders)
